Add 2021 day 10 Part1

--- a/2021/10/solution.ipynb
+++ b/2021/10/solution.ipynb
@@ -11,11 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['({[[{[(([({((<[]>{[][]})[{<>[]}{[]{}}])[<[<><>][[]{}]>{[{}()][{}]}]}(<[{<>{}}[()]]<[{}[]]>><[{()}({}())]',\n",
+       " '[[<([<<<((([<<()()>{{}()}>[[()<>]]]{<{<>[]}(()<>)>[<{}{}>[{}]]}){{({<>()}{[]})<[[][]]>}[{[']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "with open(\"input_sample.txt\", \"r\") as f:\n",
+    "with open(\"input.txt\", \"r\") as f:\n",
     "    inputs = f.readlines()\n",
     "    inputs = [i.strip() for i in inputs]\n",
     "\n",
@@ -33,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,9 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 94/94 [00:00<00:00, 5459.97it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "for i, line in enumerate(tqdm(inputs)):\n",
@@ -88,14 +108,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer for Part1 = 318081\n"
+     ]
+    }
+   ],
    "source": [
-    "syntaxscore = 0\n",
+    "ANS1 = 0\n",
     "for char in invalid_chars:\n",
-    "    syntaxscore += invalid_chars[char]*costs[char]\n",
-    "syntaxscore"
+    "    ANS1 += invalid_chars[char]*costs[char]\n",
+    "ANS1\n",
+    "\n",
+    "print(f\"Answer for Part1 = {ANS1}\")"
    ]
   },
   {
