Add 2021 day 10 Part2

--- a/2021/10/solution.ipynb
+++ b/2021/10/solution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        " '[[<([<<<((([<<()()>{{}()}>[[()<>]]]{<{<>[]}(()<>)>[<{}{}>[{}]]}){{({<>()}{[]})<[[][]]>}[{[']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 94/94 [00:00<00:00, 5459.97it/s]\n"
+      "100%|██████████| 94/94 [00:00<00:00, 5549.82it/s]\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,9 +139,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "incomplete_indices = [i for i in range(len(inputs)) if i not in corrupt_lines]\n",
     "len(incomplete_indices)"
@@ -149,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'{': '}', '[': ']', '(': ')', '<': '>'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "closing = {v:k for k,v in matches.items()}\n",
     "closing"
@@ -169,39 +191,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'({[[{[(([({((<[]>{[][]})[{<>[]}{[]{}}])[<[<><>][[]{}]>{[{}()][{}]}]}(<[{<>{}}[()]]<[{}[]]>><[{()}({}())]'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for line in incomplete_lines:\n",
+    "incomplete_lines[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "closing_seq = []\n",
+    "closing_sequences = []\n",
     "for line in incomplete_lines:\n",
-    "    return_stack = \"\"\n",
-    "    flagchar = None\n",
+    "    encountered = {\"<\":0, \"{\":0, \"(\":0, \"[\":0}\n",
+    "    closing_seq= \"\"\n",
     "    for char in line[::-1]:\n",
-    "        if char in matches:\n",
-    "            flagchar = matches[char]\n",
-    "            continue\n",
-    "        if char == flagchar:\n",
-    "            flagchar = None\n",
+    "        if char in encountered:\n",
+    "            if encountered[char] <= 0:\n",
+    "                closing_seq = closing_seq + closing[char]\n",
+    "\n",
+    "            else:\n",
+    "                encountered[char] -= 1\n",
     "\n",
     "        else:\n",
-    "            return_stack = return_stack + closing[char]\n",
+    "            encountered[matches[char]] +=  1\n",
     "\n",
-    "    closing_seq.append(return_stack)"
+    "\n",
+    "    closing_sequences.append(closing_seq)\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "incomplete_scores = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,86 +260,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer for Part2 = 4361305341\n"
+     ]
+    }
+   ],
    "source": [
-    "calculate_score('}}]])})]')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "closing_seq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "incomplete_scores = list(map(calculate_score, closing_seq))\n",
-    "incomplete_scores.sort()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "incomplete_scores = [calculate_score(s) for s in closing_sequences]\n",
     "import numpy as np\n",
-    "np.median(incomplete_scores)"
+    "ANS2 = np.median(incomplete_scores).astype(\"int64\")\n",
+    "print(f\"Answer for Part2 = {ANS2}\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "incomplete_scores"
+    "-------------\n",
+    "---------------"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(incomplete_scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "incomplete_scores[len(incomplete_indices)//2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "incomplete_scores"
-   ]
+   "source": []
   }
  ],
  "metadata": {
